Scroll jump fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 html {
   height: 100%;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
@@ -7,7 +9,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #edf1f5;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 #root {
